review-triage/kubernetes/1-kafka.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-no-keeper-bootstrap
spec:
  ports:
  - port: 9092
    protocol: TCP
    targetPort: 9092
  selector:
    app: kafka-no-keeper
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-no-keeper
spec:
  selector:
    matchLabels:
      app: kafka-no-keeper
  template:
    metadata:
      labels:
        app: kafka-no-keeper
    spec:
      containers:
      - name: kafka-no-keeper
        image: quay.io/strimzi/kafka:0.35.1-kafka-3.4.0
        command:
          - /bin/sh
          - -c
          - 'export CLUSTER_ID=$(./bin/kafka-storage.sh random-uuid) && ./bin/kafka-storage.sh format -t $CLUSTER_ID -c ./config/kraft/server.properties && ./bin/kafka-server-start.sh ./config/kraft/server.properties --override advertised.listeners=${KAFKA_ADVERTISED_LISTENERS}'
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        ports:
        - containerPort: 9092
