review-triage/kubernetes/3-review-triage-stats.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: triage-review-stats
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: review-triage-stats
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: review-triage-stats
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: ca6c0e42742c92a4a33585ad4df0d579e0e88757
    app.quarkus.io/vcs-uri: git@github.com:lordofthejars/quarkus-langchain-examples.git
    app.quarkus.io/build-timestamp: 2023-12-18 - 14:29:40 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: review-triage-stats
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: review-triage-stats
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: review-triage-stats
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: ca6c0e42742c92a4a33585ad4df0d579e0e88757
    app.quarkus.io/vcs-uri: git@github.com:lordofthejars/quarkus-langchain-examples.git
    app.quarkus.io/build-timestamp: 2023-12-18 - 14:29:40 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: review-triage-stats
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/managed-by: quarkus
  name: review-triage-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: review-triage-stats
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: ca6c0e42742c92a4a33585ad4df0d579e0e88757
        app.quarkus.io/vcs-uri: git@github.com:lordofthejars/quarkus-langchain-examples.git
        app.quarkus.io/build-timestamp: 2023-12-18 - 14:29:40 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: review-triage-stats
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/lordofthejars/review-triage-stats:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: review-triage-stats
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
